--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>
         Cameron Fuller
     </title>
-    <link rel="icon" href="./img/logo.png">
+    <link rel="icon" href="./img/PortfolioIcon.png">
     <style type="text/css">
         html {
             scroll-behavior: smooth;
@@ -508,13 +508,13 @@
             <h1> Projects </h1>
             <div>
                 <a href="http://www.devicetrackerplus.com/" class="box">
-                    <img alt="" src="./img/DeviceTrackerPlusLogo.png" />
+                    <img alt="" src="./img/DeviceTrackerPlusLogo.PNG" />
                 </a>
                 <a href="http://www.motoozo.com/" class="box">
-                    <img alt="" src="./img/MotoozoLogo.png" />
+                    <img alt="" src="./img/MotoozoLogo.PNG" />
                 </a>
                 <a href="http://numerous.app/" class="box">
-                    <img alt="" src="./img/NumerousLogo.png" />
+                    <img alt="" src="./img/NumerousLogo.PNG" />
                 </a>
             </div>
         </div>
