--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>
         Cameron Fuller
     </title>
-    <link rel="icon" href="./img/PortfolioIcon.png">
+    <link rel="icon" href="./img/PortfolioIcon.PNG">
     <style type="text/css">
         html {
             scroll-behavior: smooth;
