--- a/index.html
+++ b/index.html
@@ -464,7 +464,7 @@
     <div id="about" class="section">
         <h2>About me</h2>
         <div>
-            <p> I'm a full stack developer working for <a href="http://www.numerous.app/">Numerous international.
+            <p> I'm a full stack developer working for <a href="http://www.numerous.app/">Numerous Technology.
                 </a>
                 I have a serious passion for product design, problem solving and creating intelligent, scalable, fast
                 solutions.
@@ -481,8 +481,6 @@
                 <a href="mailto:cameron-fuller@hotmail.com"><img class="contactImg" alt="" src="./img/Email.png" /></a>
                 <a href="https://www.linkedin.com/in/cameron-fuller-455052141/"><img class="contactImg" alt=""
                         src="./img/LinkedIn.png" /></a>
-                <a href="https://www.facebook.com/cameron.philip.steven.fuller"><img class="contactImg" alt=""
-                        src="./img/Facebook.png" /></a>
             </div>
             <a href="#projects" class="highlightText fade largeText grow"> 🡣 </a>
         </div>
