--- a/index.html
+++ b/index.html
@@ -7,10 +7,12 @@
         Cameron Fuller
     </title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
     <link rel="icon" href="./img/PortfolioIcon.PNG">
     <style type="text/css">
         html {
-            overflow: hidden;
+            overflow-x: hidden;
+            max-width: 100%;
             scroll-behavior: smooth;
             font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande", "Lucida Sans", Arial, sans-serif
         }
@@ -21,7 +23,8 @@
 
         .title-background {
             background-color: #484849;
-            padding: 3%;
+            padding: 2%;
+  
             border-radius: 10px;
             box-shadow: 10px 10px 5px rgb(37, 36, 36);
         }
@@ -82,14 +85,21 @@
 
         .section {
             height: calc(100vh + 53px);
+            width: 100%;
             color: ghostwhite !important;
         }
 
         .sectionAlt {
             height: calc(100vh + 53px);
+            width: 80%;
             padding: 5%;
+            margin: auto;
             background-color: ghostwhite;
             color: #484849 !important;
+            margin-bottom: 20px;
+            border-radius: 10px;
+            position: relative;
+            box-shadow: 10px 10px 5px rgb(37, 36, 36);
         }
 
         @keyframes fade {
@@ -110,7 +120,6 @@
             background: #4e54c8;
             background: -webkit-linear-gradient(to left, #8f94fb, #4e54c8);
             width: 100%;
-            height: 100%;
         }
 
         .circles {
@@ -118,7 +127,7 @@
             top: 0;
             left: 0;
             width: 100%;
-            height: 100%;
+            height: calc(100vh + 53px);
             overflow: hidden;
             z-index: -1;
         }
@@ -341,7 +350,7 @@
     </div>
 
     <!-- About -->
-    <div id="about" class="sectionAlt">
+    <div id="about" class="sectionAlt" style="margin-bottom: 20px;">
         <h2>About me</h2>
         <p> I'm a full stack developer working for <a class="highlightText" href="http://www.numerous.app/">Numerous
                 Technology.</a>
@@ -356,25 +365,83 @@
             <a href="https://www.linkedin.com/in/cameron-fuller-455052141/"><img class="contactImg" alt=""
                     src="./img/LinkedIn.png" /></a>
             <br />
-            <a href="#skills" class="highlightText fade largeText grow"> ⯆ </a>
+            <a href="#skills" class="highlightText fade largeText grow" style="bottom: 0;"> ⯆ </a>
         </div>
     </div>
 
     <!-- Skills -->
     <div id="skills" class="sectionAlt">
         <h2>Skills</h2>
-        <ul>
-            <li>C#</li>
-            <li>Javascript</li>
-            <li>Node JS</li>
-            <li>Vue JS</li>
-            <li>Azure</li>
-            <li>SQL</li>
-            <li>HTML 5</li>
-            <li>React JS</li>
-            <li>CSS</li>
+        <div>
+            <ul>
 
-        </ul>
+                <li style="display: inline-block;width:100%;padding-top:20px;">C#
+                    <div class="w3-light-grey w3-round-xlarge" style="float: right;width: 50%;">
+                        <div class="w3-container w3-blue w3-round-xlarge" style="width:90%">90%</div>
+                    </div>
+                </li>
+                <li style="display: inline-block;width:100%;padding-top:20px;">SQL
+                    <div class="w3-light-grey w3-round-xlarge" style="float: right;width: 50%;">
+                        <div class="w3-container w3-blue w3-round-xlarge" style="width:80%">80%</div>
+                    </div>
+                </li>
+                <li style="display: inline-block;width:100%;padding-top:20px;">Azure
+                    <div class="w3-light-grey w3-round-xlarge" style="float: right;width: 50%;">
+                        <div class="w3-container w3-blue w3-round-xlarge" style="width:80%">80%</div>
+                    </div>
+                </li>
+
+                <li style="display: inline-block;width:100%;padding-top:20px;">Xamarin
+                        <div class="w3-light-grey w3-round-xlarge" style="float: right;width: 50%;">
+                            <div class="w3-container w3-blue w3-round-xlarge" style="width:80%">80%</div>
+                        </div>
+                    </li>
+
+                <li style="display: inline-block;width:100%;padding-top:20px;">Javascript
+                    <div class="w3-light-grey w3-round-xlarge" style="float: right;width: 50%;">
+                        <div class="w3-container w3-blue w3-round-xlarge" style="width:90%">90%</div>
+                    </div>
+                </li>
+                <li style="display: inline-block;width:100%;padding-top:20px;">HTML 5
+                    <div class="w3-light-grey w3-round-xlarge" style="float: right;width: 50%;">
+                        <div class="w3-container w3-blue w3-round-xlarge" style="width:90%">90%</div>
+                    </div>
+                </li>
+                <li style="display: inline-block;width:100%;padding-top:20px;">CSS
+                    <div class="w3-light-grey w3-round-xlarge" style="float: right;width: 50%;">
+                        <div class="w3-container w3-blue w3-round-xlarge" style="width:80%">80%</div>
+                    </div>
+                </li>
+
+                <li style="display: inline-block;width:100%;padding-top:20px;">React JS
+                        <div class="w3-light-grey w3-round-xlarge" style="float: right;width: 50%;">
+                            <div class="w3-container w3-blue w3-round-xlarge" style="width:50%">50%</div>
+                        </div>
+                    </li>
+                    <li style="display: inline-block;width:100%;padding-top:20px;">Vue JS
+                        <div class="w3-light-grey w3-round-xlarge" style="float: right;width: 50%;">
+                            <div class="w3-container w3-blue w3-round-xlarge" style="width:70%">70%</div>
+                        </div>
+                    </li>
+                    <li style="display: inline-block;width:100%;padding-top:20px;">Angular
+                        <div class="w3-light-grey w3-round-xlarge" style="float: right;width: 50%;">
+                            <div class="w3-container w3-blue w3-round-xlarge" style="width:80%">80%</div>
+                        </div>
+                    </li>
+
+                <!-- <li>Xamarin <progress value="0.8" style="float: right;"></progress></li>
+                <li>Javascript <progress value="0.8" style="float: right;"></progress></li>
+                <li>Node JS <progress value="0.6" style="float: right;"></progress></li>
+                <li>Vue JS <progress value="0.7" style="float: right;"></progress></li>
+                <li>Azure <progress value="0.7" style="float: right;"></progress></li>
+                <li>SQL <progress value="0.7" style="float: right;"></progress></li>
+                <li>HTML 5 <progress value="0.9" style="float: right;"></progress></li>
+                <li>React JS <progress value="0.5" style="float: right;"></progress></li>
+                <li>CSS <progress value="0.7" style="float: right;"></progress></li> -->
+
+            </ul>
+        </div>
+
         <div class="center">
             <a href="#projects" class="highlightText fade largeText grow"> ⯆ </a>
         </div>
